--- a/index.html
+++ b/index.html
@@ -2,27 +2,60 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Opóźniony Widget Tipply</title>
+  <title>Opóźniony Widget Tipply (30s delay)</title>
   <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
+      background-color: #000;
+      font-family: sans-serif;
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+    #loading {
+      font-size: 24px;
+      color: white;
+      position: absolute;
+      z-index: 1;
+    }
+
     #widget-container {
       display: none;
+      position: absolute;
+      top: 0;
+      left: 0;
       width: 100%;
-      height: 300px;
+      height: 100%;
+    }
+
+    iframe {
+      border: none;
+      width: 100vw;
+      height: 100vh;
+      display: block;
     }
   </style>
 </head>
 <body>
-  <h1>Opóźniony Widget Tipply (30s delay)</h1>
-  <div id="widget-container">
-    <iframe src="https://widgets.tipply.pl/TIP_ALERT/ec34c695-204d-445d-9362-43766d13bb27" 
-            width="400" height="300" frameborder="0" scrolling="no"></iframe>
-  </div>
+  <div id="loading">Opóźniony Widget Tipply (czekam 30s...)</div>
+  <div id="widget-container"></div>
 
   <script>
-    // Opóźnij pokazanie widgetu o 30 sekund (30000 ms)
     setTimeout(() => {
-      document.getElementById('widget-container').style.display = 'block';
-    }, 30000);
+      document.getElementById("loading").style.display = "none";
+      const container = document.getElementById("widget-container");
+      container.style.display = "block";
+
+      const iframe = document.createElement("iframe");
+      iframe.src = "https://widgets.tipply.pl/TIP_ALERT/ec34c695-204d-445d-9362-43766d13bb27";
+      iframe.allow = "autoplay";
+      container.appendChild(iframe);
+    }, 30000); // 30 sekund
   </script>
 </body>
 </html>
