--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Opóźniony Widget Tipplyy (30s delay)</title>
+  <title>Opóźniony Widget Tipply (30s delay)</title>
   <style>
     html, body {
       margin: 0;
