--- a/index.html
+++ b/index.html
@@ -7,21 +7,19 @@
     html, body {
       margin: 0;
       padding: 0;
-      height: 100%;
-      width: 100%;
-      background-color: #000;
-      font-family: sans-serif;
+      width: 100vw;
+      height: 100vh;
       overflow: hidden;
+      background-color: #000;
       display: flex;
       align-items: center;
       justify-content: center;
+      font-family: sans-serif;
+      color: #fff;
     }
 
     #loading {
       font-size: 24px;
-      color: white;
-      position: absolute;
-      z-index: 1;
     }
 
     #widget-container {
@@ -29,15 +27,15 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
+      width: 100vw;
+      height: 100vh;
+      z-index: 9999;
     }
 
     iframe {
+      width: 100%;
+      height: 100%;
       border: none;
-      width: 100vw;
-      height: 100vh;
-      display: block;
     }
   </style>
 </head>
@@ -55,7 +53,7 @@
       iframe.src = "https://widgets.tipply.pl/TIP_ALERT/ec34c695-204d-445d-9362-43766d13bb27";
       iframe.allow = "autoplay";
       container.appendChild(iframe);
-    }, 30000); // 30 sekund
+    }, 30000); // 30 sekund = 30000 ms
   </script>
 </body>
 </html>
