--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Opóźniony Widget Tipply (30s delay)</title>
+  <title>Opóźniony Widget Tipply (1s delay)</title>
   <style>
     html, body {
       margin: 0;
@@ -40,7 +40,7 @@
   </style>
 </head>
 <body>
-  <div id="loading">Opóźniony Widget Tipply (czekam 30s...)</div>
+  <div id="loading">Ładowanie Tipply widget... (1s)</div>
   <div id="widget-container"></div>
 
   <script>
@@ -53,7 +53,7 @@
       iframe.src = "https://widgets.tipply.pl/TIP_ALERT/ec34c695-204d-445d-9362-43766d13bb27";
       iframe.allow = "autoplay";
       container.appendChild(iframe);
-    }, 30000); // 30 sekund = 30000 ms
+    }, 1000); // 1 sekunda = 1000 ms
   </script>
 </body>
 </html>
