--- a/index.html
+++ b/index.html
@@ -2,27 +2,54 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Opóźniony Widget Tipply</title>
+  <title>Opóźniony Widget Tipply (30s delay)</title>
   <style>
+    body {
+      font-family: sans-serif;
+      text-align: center;
+      margin: 0;
+      padding: 40px;
+      background-color: #f5f5f5;
+    }
+
     #widget-container {
       display: none;
       width: 100%;
-      height: 300px;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+
+    iframe {
+      width: 100%;
+      height: 600px;
+      border: none;
+    }
+
+    #loading {
+      font-size: 20px;
+      color: #666;
     }
   </style>
 </head>
 <body>
-  <h1>Opóźniony Widget Tipply (30s delay)</h1>
-  <div id="widget-container">
-    <iframe src="https://widgets.tipply.pl/TIP_ALERT/ec34c695-204d-445d-9362-43766d13bb27" 
-            width="400" height="300" frameborder="0" scrolling="no"></iframe>
-  </div>
+  <h1>Opóźniony Widget Tipply</h1>
+  <div id="loading">Czekam 30 sekund przed załadowaniem widgetu...</div>
+  <div id="widget-container"></div>
 
   <script>
-    // Opóźnij pokazanie widgetu o 30 sekund (30000 ms)
-    setTimeout(() => {
-      document.getElementById('widget-container').style.display = 'block';
-    }, 30000);
+    window.onload = () => {
+      setTimeout(() => {
+        document.getElementById('loading').style.display = 'none';
+
+        const container = document.getElementById('widget-container');
+        container.style.display = 'block';
+
+        const iframe = document.createElement('iframe');
+        iframe.src = "https://widgets.tipply.pl/TIP_ALERT/ec34c695-204d-445d-9362-43766d13bb27";
+        iframe.allow = "autoplay"; // w razie potrzeby dźwięków
+        container.appendChild(iframe);
+      }, 30000); // 30 sekund
+    };
   </script>
 </body>
 </html>
