--- a/index.html
+++ b/index.html
@@ -2,53 +2,48 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Opóźniony Widget Tipply (30s delay)</title>
+  <title>Cykliczne ukrycie raz (30s) dla widgetu Tipply</title>
   <style>
-    body {
-      font-family: sans-serif;
-      text-align: center;
-      margin: 0;
-      padding: 40px;
-      background-color: #f5f5f5;
+    html, body {
+      margin: 0; padding: 0;
+      width: 100vw; height: 100vh;
+      overflow: hidden;
+      display: flex; align-items: center; justify-content: center;
+      background: #000;
     }
-
     #widget-container {
-      display: none;
-      width: 100%;
-      max-width: 800px;
-      margin: 0 auto;
+      width: 100%; height: 100%;
+      position: absolute; top: 0; left: 0;
     }
-
     iframe {
-      width: 100%;
-      height: 600px;
       border: none;
-    }
-
-    #loading {
-      font-size: 20px;
-      color: #666;
+      width: 100%; height: 100%;
     }
   </style>
 </head>
 <body>
-  <h1>Opóźniony Widget Tipply</h1>
-  <div id="loading">Czekam 30 sekund przed załadowaniem widgetu...</div>
-  <div id="widget-container"></div>
+  <div id="widget-container">
+    <iframe id="tipply-iframe"
+      src="https://widgets.tipply.pl/TIP_ALERT/ec34c695-204d-445d-9362-43766d13bb27"
+      allow="autoplay">
+    </iframe>
+  </div>
 
   <script>
+    // Jeśli chcesz, aby widget był widoczny przez jakiś czas przed ukryciem, zmień initialVisibleMs.
+    const initialVisibleMs = 0; // 0 = ukrycie natychmiast po załadowaniu
+    const hideDurationMs = 30000; // 30 sekund
+
     window.onload = () => {
+      const container = document.getElementById('widget-container');
+      // Jeżeli initialVisibleMs > 0, widget zostanie ukryty dopiero po tym czasie. Przy 0: natychmiast.
       setTimeout(() => {
-        document.getElementById('loading').style.display = 'none';
-
-        const container = document.getElementById('widget-container');
-        container.style.display = 'block';
-
-        const iframe = document.createElement('iframe');
-        iframe.src = "https://widgets.tipply.pl/TIP_ALERT/ec34c695-204d-445d-9362-43766d13bb27";
-        iframe.allow = "autoplay"; // w razie potrzeby dźwięków
-        container.appendChild(iframe);
-      }, 30000); // 30 sekund
+        container.style.display = 'none';
+        // po 30s pokaż ponownie i zakończ
+        setTimeout(() => {
+          container.style.display = 'block';
+        }, hideDurationMs);
+      }, initialVisibleMs);
     };
   </script>
 </body>
