--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pl">
 <head>
   <meta charset="UTF-8" />
-  <title>Widget Tipply: ukrycie raz na 30s</title>
+  <title>Widget Tipply: ukrycie raz (30s) po 1s widoczności</title>
   <style>
     html, body {
       margin: 0;
@@ -40,8 +40,8 @@
   <div id="widget-container"></div>
 
   <script>
-    // Ustawienia:
-    const initialVisibleMs = 5000; // czas widoczny przed ukryciem, ms (np. 5000 = 5s). Dla natychmiastowego ukrycia ustaw 0.
+    // Czas widoczności przed ukryciem: 1 sekunda
+    const initialVisibleMs = 1000;
     const hideDurationMs = 30000; // 30 sekund ukrycia
 
     window.onload = () => {
@@ -54,16 +54,14 @@
       iframe.allow = "autoplay";
       container.appendChild(iframe);
       container.style.display = 'block';
-      statusEl.textContent = initialVisibleMs > 0
-        ? `Widget będzie widoczny ${initialVisibleMs/1000}s, potem ukryty na 30s...`
-        : `Widget ukryty od razu na 30s...`;
+      statusEl.textContent = `Widget będzie widoczny 1s, potem ukryty na 30s...`;
 
-      // Po initialVisibleMs ukrywamy
+      // Po 1s ukrywamy
       setTimeout(() => {
         container.style.display = 'none';
         statusEl.textContent = `Widget ukryty. Za ${hideDurationMs/1000}s pojawi się ponownie.`;
 
-        // Po hideDurationMs pokazujemy ponownie i kończymy
+        // Po 30s pokazujemy ponownie
         setTimeout(() => {
           container.style.display = 'block';
           statusEl.textContent = 'Widget ponownie widoczny';
